--- a/index.html
+++ b/index.html
@@ -1,37 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ro">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="theme-color" content="#0b1220"/>
   <title>TimeArena demo</title>
-
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#0b1220" />
-  <link rel="icon" href="icon-192.png">
-
-  <!-- iOS PWA hints -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="icon-192.png">
-
+  <link rel="manifest" href="manifest.json"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
   <div class="app">
 
-    <!-- TOPBAR (mobile) -->
-    <header class="topbar">
-      <button id="btnMenu" class="icon-btn" aria-label="Meniu">☰</button>
-      <div class="topbar-title">
-        <div class="brand-mini">⏳ TimeArena</div>
-        <div class="brand-sub">demo • Kid Edition</div>
-      </div>
-      <button id="btnQuickAdd" class="pill">+ Bonus</button>
-    </header>
-
     <!-- SIDEBAR -->
-    <aside class="sidebar" id="sidebar">
+    <aside class="sidebar">
       <div class="brand">
         <div class="brand-badge">⏳</div>
         <div class="brand-meta">
@@ -42,170 +24,82 @@
 
       <nav class="nav">
         <button class="nav-item active" data-view="dashboard"><span class="nav-ic">🏠</span><span>Panou</span></button>
-        <button class="nav-item" data-view="missions"><span class="nav-ic">✅</span><span>Misiuni</span></button>
-        <button class="nav-item" data-view="penalties"><span class="nav-ic">💥</span><span>Penalități</span></button>
+        <button class="nav-item" data-view="missions"><span class="nav-ic">🎯</span><span>Misiuni</span></button>
+        <button class="nav-item" data-view="shop"><span class="nav-ic">🛍️</span><span>Magazin</span></button>
+        <button class="nav-item" data-view="penalties"><span class="nav-ic">🛡️</span><span>Penalități</span></button>
+        <button class="nav-item" data-view="history"><span class="nav-ic">🧾</span><span>Istoric</span></button>
         <button class="nav-item" data-view="rules"><span class="nav-ic">📜</span><span>Reguli</span></button>
-        <button class="nav-item" data-view="history"><span class="nav-ic">🕒</span><span>Istoric</span></button>
-        <button class="nav-item" data-view="report"><span class="nav-ic">📈</span><span>Raport</span></button>
+        <button class="nav-item" data-view="report"><span class="nav-ic">📊</span><span>Raport</span></button>
       </nav>
 
       <div class="sidebar-footer">
-        <div class="tiny">Kid: <b id="kidNameLabel">Nikita</b> • v0.1</div>
-        <button id="btnReset" class="ghost">Reset local</button>
+        <div class="pill">🔄 Date LIVE din Google Sheets</div>
+        <div class="muted">TimeArena demo • v1.00</div>
       </div>
     </aside>
 
     <!-- MAIN -->
     <main class="main">
+      <header class="topbar">
+        <div class="left">
+          <div class="title">TimeArena demo</div>
+          <div class="subtitle" id="subtitle">Încarc datele…</div>
+        </div>
 
-      <!-- DASHBOARD -->
-      <section class="view" id="view-dashboard">
-        <div class="grid">
+        <div class="right">
+          <button class="btn ghost" id="btnRefresh">🔄 Refresh</button>
+          <button class="btn" id="btnPlayMode" aria-pressed="true">🎮 Play Mode: ON</button>
+        </div>
+      </header>
 
-          <div class="card hero">
-            <div class="hero-left">
-              <div class="hello">Salut, <b id="kidNameHello">Nikita</b> 👑</div>
-              <div class="sub">Câștigi minute reale. Pierzi minute când sari peste obligatorii.</div>
-
-              <div class="stats">
-                <div class="stat">
-                  <div class="label">Timp disponibil</div>
-                  <div class="value"><span id="timeBalance">0</span> min</div>
-                </div>
-                <div class="stat">
-                  <div class="label">Nivel</div>
-                  <div class="value">Lv <span id="level">1</span></div>
-                </div>
-                <div class="stat">
-                  <div class="label">Streak</div>
-                  <div class="value"><span id="streak">0</span> 🔥</div>
-                </div>
-              </div>
-
-              <div class="progress-wrap">
-                <div class="progress-meta">
-                  <span>XP</span>
-                  <span><b id="xp">0</b> / <b id="nextXp">100</b></span>
-                </div>
-                <div class="progress">
-                  <div class="progress-bar" id="xpBar" style="width:0%"></div>
-                </div>
-              </div>
-
-              <div class="hero-actions">
-                <button class="btn" data-jump="missions">Alege misiune</button>
-                <button class="btn secondary" data-jump="penalties">Vezi penalități</button>
-              </div>
-            </div>
-
-            <div class="hero-right">
-              <div class="badge">
-                <div class="badge-top">Motivație</div>
-                <div class="badge-val" id="motivation">OK</div>
-                <div class="badge-sub" id="motivationHint">Ține ritmul 2 zile la rând.</div>
-              </div>
-
-              <div class="mini-card">
-                <div class="mini-title">Azi</div>
-                <div class="mini-row"><span>✔ Misiuni completate</span><b id="doneToday">0</b></div>
-                <div class="mini-row"><span>⏳ Minute câștigate</span><b id="earnedToday">0</b></div>
-                <div class="mini-row"><span>💥 Minute pierdute</span><b id="lostToday">0</b></div>
-              </div>
-            </div>
+      <section class="statusbar">
+        <div class="stat">
+          <div class="stat-k">👤 Jucător</div>
+          <div class="stat-v" id="statPlayer">Nikita</div>
+        </div>
+        <div class="stat">
+          <div class="stat-k">⭐ Level</div>
+          <div class="stat-v" id="statLevel">1</div>
+        </div>
+        <div class="stat">
+          <div class="stat-k">✨ XP</div>
+          <div class="stat-v" id="statXP">0</div>
+        </div>
+        <div class="stat">
+          <div class="stat-k">⏳ Timp total</div>
+          <div class="stat-v" id="statTime">0 min</div>
+        </div>
+        <div class="stat">
+          <div class="stat-k">🔥 Streak</div>
+          <div class="stat-v" id="statStreak">0</div>
+        </div>
+        <div class="stat wide">
+          <div class="stat-k">🧠 Motivație</div>
+          <div class="stat-v">
+            <div class="meter"><div class="meter-fill" id="motivationFill" style="width:35%"></div></div>
           </div>
-
-          <div class="card">
-            <div class="card-title">Scurtături</div>
-            <div class="chips">
-              <button class="chip" data-filter="Responsabilitate">🧹 Responsabilitate</button>
-              <button class="chip" data-filter="Școală">📚 Școală</button>
-              <button class="chip" data-filter="Comportament">🙂 Comportament</button>
-              <button class="chip" data-filter="Sport">⚽ Sport</button>
-              <button class="chip" data-filter="Familie">👨‍👩‍👦 Familie</button>
-              <button class="chip" data-filter="Bonus">✨ Bonus</button>
-            </div>
-            <div class="muted">Apasă o categorie ca să vezi direct misiunile din ea.</div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">Ultimele evenimente</div>
-            <div id="latestEvents" class="list"></div>
-          </div>
-
         </div>
       </section>
 
-      <!-- MISSIONS -->
-      <section class="view hidden" id="view-missions">
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Misiuni</div>
-              <div class="muted">Alege o misiune → câștigi minute (și XP).</div>
-            </div>
-            <div class="row">
-              <select id="categorySelect" class="select"></select>
-              <input id="searchInput" class="input" placeholder="Caută misiune..." />
-            </div>
-          </div>
-          <div id="missionsGrid" class="cards"></div>
-        </div>
+      <section class="content">
+        <!-- Views -->
+        <div class="view active" id="view-dashboard"></div>
+        <div class="view" id="view-missions"></div>
+        <div class="view" id="view-shop"></div>
+        <div class="view" id="view-penalties"></div>
+        <div class="view" id="view-history"></div>
+        <div class="view" id="view-rules"></div>
+        <div class="view" id="view-report"></div>
       </section>
 
-      <!-- PENALTIES -->
-      <section class="view hidden" id="view-penalties">
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Penalități</div>
-              <div class="muted">Aplică doar când e clar: “nu s-a făcut”.</div>
-            </div>
-            <div class="row">
-              <select id="penaltyLevelSelect" class="select"></select>
-            </div>
-          </div>
-          <div id="penaltiesGrid" class="cards"></div>
-        </div>
-      </section>
-
-      <!-- RULES -->
-      <section class="view hidden" id="view-rules">
-        <div class="card">
-          <div class="card-title">Reguli</div>
-          <div class="muted">Reguli principale + secundare (ușor de actualizat din rules.js)</div>
-          <div id="rulesList" class="rules"></div>
-        </div>
-      </section>
-
-      <!-- HISTORY -->
-      <section class="view hidden" id="view-history">
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Istoric</div>
-              <div class="muted">Tot ce s-a întâmplat local (temporar, până la sync).</div>
-            </div>
-            <button id="btnExportJson" class="btn secondary">Export JSON</button>
-          </div>
-          <div id="historyList" class="list"></div>
-        </div>
-      </section>
-
-      <!-- REPORT -->
-      <section class="view hidden" id="view-report">
-        <div class="card">
-          <div class="card-title">Raport (demo)</div>
-          <div class="muted">Aici intră: raport săptămânal, PDF, grafice. Momentan: sumar pe ultimele 7 zile.</div>
-          <div id="reportBox" class="report"></div>
-        </div>
-      </section>
-
-      <!-- TOAST + CONFETTI -->
-      <div id="toast" class="toast hidden"></div>
-      <canvas id="confetti" class="confetti"></canvas>
-
+      <footer class="footer">
+        <div>⚔️ TimeArena • “Jocul e corect. Nu negociază.”</div>
+      </footer>
     </main>
   </div>
+
+  <div class="toast" id="toast" hidden></div>
+  <div class="confetti" id="confetti" hidden></div>
 
   <script type="module" src="app.js"></script>
 </body>
